Bizfi Production/src/objects/Deduplication_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Account_Phones__c</fullName>
        <label>Account Phones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phones__c</fullName>
        <label>Contact Phones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Applicant_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Applicant Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Customer_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Customer Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Prospect_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Prospect Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Prospect_for_Accounts_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Prospect for Accounts Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Phones__c</fullName>
        <label>Lead Phones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>De-Duplication Settings</label>
</CustomObject>